# Qt-DragableTabWidget

./: CMakeLists.txt
dragable_tab_window/: dragabletabarea.cpp  dragabletabgroup.cpp
